<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.trenirovochka.presentation.common.views.SimpleToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:st_title="@string/edit_training_program_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_container">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/training_program_name_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_training_plan_name_hint"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/training_program_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="text"
                style="@style/MerriweatherBold.OnSurface.18" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/training_program_exercises_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/training_program_name_input_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceVariant"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.example.trenirovochka.presentation.common.util.BetterViewAnimator
            android:id="@+id/bottom_container_view_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bva_visible_child="@id/edit_exercise_container">

            <Button
                android:id="@+id/add_exercise_to_training_program_button"
                style="@style/ActionButton.Primary"
                android:text="@string/add_exercise" />

            <LinearLayout
                android:id="@+id/edit_exercise_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/remove_exercise_button"
                    android:layout_weight="1"
                    style="@style/ActionButton.Secondary"
                    android:layout_width="wrap_content"
                    android:text="@string/remove_exercise"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/edit_exercise_button"
                    android:layout_weight="1"
                    style="@style/ActionButton.Primary"
                    android:layout_width="wrap_content"
                    android:text="@string/edit_exercise"/>
            </LinearLayout>
        </com.example.trenirovochka.presentation.common.util.BetterViewAnimator>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>